<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_musician_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.RegisterMusicianView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/musician_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/musician_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/musician_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_dni"
            android:inputType="text" />

        <EditText
            android:id="@+id/musician_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_birth_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/musician_performance_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_fee"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/musician_affiliated_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/musician_affiliated_num"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/musician_affiliated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musician_is_affiliated"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_musician_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="registerMusician"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>